<?xml version="1.0" encoding="utf-8" ?>
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+android:id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >
    
    <RadioGroup android:id="@+id/base_container"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<RadioButton android:id="@+id/decimal"
		    android:layout_width="0dp"
		    android:layout_height="@dimen/radio_height"
		    android:layout_weight="1"
		    android:text="@string/decimal"
		    android:textColor="@color/text_color_black"
		    android:gravity="center"
		    android:background="@drawable/radio_button_drawable"
		    android:button="@null"
		    android:clickable="true" />
		
		<RadioButton android:id="@+id/hexadecimal"
		    android:layout_width="0dp"
		    android:layout_height="@dimen/radio_height"
		    android:layout_weight="1"
		    android:text="@string/hexadecimal"
		    android:textColor="@color/text_color_black"
		    android:gravity="center"
		    android:background="@drawable/radio_button_drawable"
		    android:button="@null"
		    android:clickable="true"/>
 </RadioGroup>

    <include layout="@layout/station_lock_gsm_layout"/>
    <include layout="@layout/station_lock_cdma_layout"/>
    <include layout="@layout/station_lock_alarm_layout"/>
    
    <Button android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="10dip"
        android:text="@string/station_add_lock"
        style="@style/button_orange_style"
        android:onClick="addLock" />
    
</LinearLayout>
    
